--- a/trunk/scripts/www/template.html
+++ b/trunk/scripts/www/template.html
@@ -7,10 +7,27 @@
 
   | <a href="index.html">Back up to the index</a> |<br>
 
-  <h1>Option: %title%</h1>
+  <h1>Option: %name%</h1>
 
   <pre>
 %ldoc%
+  </pre>
+
+  <h2>Default Values</h2>
+
+  <p>
+%name% %default%
+  </p>
+
+  <h2>Compile-time option</h2>
+  <p>
+%ifdef%
+  </p>
+
+  <h2>Suggested Base Configuration</h2>
+
+  <pre>
+%nocomment%
   </pre>
 
   </body>
