Get the ToC running, with raw section separators.

--- a/scripts/www/template.html
+++ b/scripts/www/template.html
@@ -5,7 +5,7 @@
 
   <body>
 
-  | <a href="index.html">Back up to the index</a> |<br>
+  | <a href="index.html#%name%">Back up to the index</a> |<br>
 
   <h1>Option: %name%</h1>
 
@@ -21,7 +21,7 @@
   <h2>Default Values</h2>
 
   <p>
-%name% %default%
+%default%
   </p>
 
   <h2>Compile-time option</h2>
@@ -32,7 +32,7 @@
   <h2>Suggested Base Configuration</h2>
 
   <pre>
-%nocomment%
+%config%
   </pre>
 
   </body>
