--- a/trunk/scripts/www/template.html
+++ b/trunk/scripts/www/template.html
@@ -5,7 +5,7 @@
 
   <body>
 
-  | <a href="index.html#%name%">Back up to the index</a> |<br>
+  | <a href="%toc_link%">Back up to the index</a> |<br>
 
   <h1>Option: %name%</h1>
 
