--- a/trunk/scripts/www/template.html
+++ b/trunk/scripts/www/template.html
@@ -35,7 +35,11 @@
       <th>Default Value:</th><td>%default%</td>
     </tr>
     <tr>
-      <th>Suggested Config:</th><td>%config%</td>
+      <th>Suggested Config:</th>
+      <td>
+<pre>
+%config%
+      </td>
     </tr>
     <tr>
       <td colspan="2">
