--- a/trunk/scripts/www/template_single.html
+++ b/trunk/scripts/www/template_single.html
@@ -14,7 +14,12 @@
       <th>Default Value:</th><td>%default%</td>
     </tr>
     <tr>
-      <th>Suggested Config:</th><td>%config%</td>
+      <th>Suggested Config:</th>
+      <td>
+<pre>
+%config%
+</pre>
+      </td>
     </tr>
     <tr>
       <td colspan="2">
