--- a/scripts/www/template.html
+++ b/scripts/www/template.html
@@ -5,6 +5,7 @@
     <title>Squid %version% Configuration File: %title%</title>
     <meta name="keywords" content="squid squid.conf config configure %name%" />
     <meta name="description" content="Squid %version%  %name% " />
+    <link href="/default.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,6 +19,9 @@
   </head>
 
   <body>
+
+<div id="content">
+	<div id="colOne">
 
   <p>|&nbsp;<a href="%toc_link%">Back up to the index</a>&nbsp;|</p>
 
@@ -52,6 +56,8 @@
   </table>
 
   <p>|&nbsp;<a href="%toc_link%">Back up to the index</a>&nbsp;|</p>
+
+  </div></div>
 
   </body>
 </html>
