* remove the CSS stuff for now; eww. * Add in alpha menu links as well as ToC links

--- a/scripts/www/template.html
+++ b/scripts/www/template.html
@@ -5,25 +5,15 @@
     <title>Squid %version% Configuration File: %title%</title>
     <meta name="keywords" content="squid squid.conf config configure %name%" />
     <meta name="description" content="Squid %version%  %name% " />
-    <link href="/default.css" rel="stylesheet" type="text/css" />
 </head>
-
-<body>
-    <div id="header">
-        <div id="logo">
-            <h1><a href="http://www.squid-cache.org/"><span>Squid-</span>Cache.org</a></h1>
-            <h2>Optimising Web Delivery</h2>
-	</div>
-    </div>
-
-  </head>
 
   <body>
 
-<div id="content">
-	<div id="colOne">
 
-  <p>|&nbsp;<a href="%toc_link%">Back up to the index</a>&nbsp;|</p>
+  <p>
+  |&nbsp;<a href="%toc_link%">Index</a>&nbsp;
+  |&nbsp;<a href="%alpha_link%">Alphabetical Index</a>&nbsp;|
+  </p>
 
   <table summary="%name%">
     <tr>
@@ -55,9 +45,10 @@
     <tr class="spacer"><td>&nbsp;</td></tr>
   </table>
 
-  <p>|&nbsp;<a href="%toc_link%">Back up to the index</a>&nbsp;|</p>
-
-  </div></div>
+  <p>
+  |&nbsp;<a href="%toc_link%">Index</a>&nbsp;
+  |&nbsp;<a href="%alpha_link%">Alphabetical Index</a>&nbsp;|
+  </p>
 
   </body>
 </html>
