Fixed HTML structure somehow broken: <td> => <th>.

--- a/scripts/www/template.html
+++ b/scripts/www/template.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Squid %version%  %name% " />
 </head>
 
-  <body>
-
+<body>
 
   <p>
   |&nbsp;<a href="%toc_link%">Index</a>&nbsp;
@@ -17,10 +16,10 @@
 
   <table summary="%name%">
     <tr>
-      <td>Option Name:</th><td><a name="%name%">%name%</a></td>
+      <th>Option Name:</th><td><a name="%name%">%name%</a></td>
     </tr>
     <tr>
-      <td>Also Known As:</th><td>%aliaslist%</td>
+      <th>Also Known As:</th><td>%aliaslist%</td>
     </tr>
     <tr>
       <th>Requires:</th><td>%ifdef%</td>
@@ -31,8 +30,9 @@
     <tr>
       <th>Suggested Config:</th>
       <td>
-<pre>
+        <pre>
 %config%
+        </pre>
       </td>
     </tr>
     <tr>
