--- a/scripts/www/template_single.html
+++ b/scripts/www/template_single.html
@@ -2,10 +2,10 @@
   <h2>Option: <a href="%toc_link%" name="%name%">%name%</a></h2>
   <table summary="%name%">
     <tr>
-      <td>Option Name:</th><td><a name="%name%">%name%</a></td>
+      <th>Option Name:</th><td><a name="%name%">%name%</a></td>
     </tr>
     <tr>
-      <td>Also Known As:</th><td>%aliaslist%</td>
+      <th>Also Known As:</th><td>%aliaslist%</td>
     </tr>
     <tr>
       <th>Compile Requires:</th><td>%ifdef%</td>
@@ -16,9 +16,9 @@
     <tr>
       <th>Suggested Config:</th>
       <td>
-<pre>
+        <pre>
 %config%
-</pre>
+        </pre>
       </td>
     </tr>
     <tr>
