--- a/scripts/www/template_single.html
+++ b/scripts/www/template_single.html
@@ -1,31 +1,31 @@
 
   <h2>Option: <a href="%toc_link%" name="%name%">%name%</a></h2>
-  <table summary="%name%">
+  <table class="summary" summary="%name%">
     <tr>
-      <th>Option Name:</th><td><a name="%name%">%name%</a></td>
+      <th>Option Name:</th><td id="name"><a name="%name%">%name%</a></td>
     </tr>
     <tr>
-      <th>Also Known As:</th><td>%aliaslist%</td>
+      <th>Replaces:</th><td id="alias">%aliaslist%</td>
     </tr>
     <tr>
-      <th>Compile Requires:</th><td>%ifdef%</td>
+      <th>Compile Requires:</th><td id="requires">%ifdef%</td>
     </tr>
     <tr>
-      <th>Default Value:</th><td>%default%</td>
+      <th>Default Value:</th><td id="default">%default%</td>
     </tr>
     <tr>
       <th>Suggested Config:</th>
-      <td>
-        <pre>
+      <td id="config">
+<pre>
 %config%
-        </pre>
+</pre>
       </td>
     </tr>
     <tr>
-      <td colspan="2">
-        <pre>
+      <td id="detail" colspan="2">
+<pre>
 %ldoc%
-        </pre>
+</pre>
       </td>
     </tr>
     <tr class="spacer"><td>&nbsp;</td></tr>
